--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- ==================== UNICONs ================== -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+   
+    <!-- ==================== CSS ================== -->
+    <link rel="stylesheet" href="style.css">
+
     <title>Immutable</title>
 </head>
 <body>
+    <!-- ==================== HEADER ================== -->
+    <!-- ==================== MAIN ================== -->
+    <!-- ==================== CSS ================== -->
+    <!-- ==================== CSS ================== -->
+    <!-- ==================== CSS ================== -->
+    <!-- ==================== CSS ================== -->
+    <!-- ==================== Email Js ================== -->
+    <script src=""></script>
     
+    <!-- ==================== MAIN JS ================== -->
+    <script src="main.js"></script>
 </body>
 </html>
