--- a/index.html
+++ b/index.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- ==================== UNICONs ================== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-   
+
     <!-- ==================== CSS ================== -->
     <link rel="stylesheet" href="style.css">
 
     <title>Immutable</title>
 </head>
+
 <body>
     <!-- ==================== HEADER ================== -->
     <!-- ==================== MAIN ================== -->
-    <!-- ==================== CSS ================== -->
-    <!-- ==================== CSS ================== -->
-    <!-- ==================== CSS ================== -->
-    <!-- ==================== CSS ================== -->
+    <main class="class">
+        <!-- ==================== HOME ================== -->
+        <section class="home" id="home">
+            <div class="home__container container grid">
+                <div class="home__content">
+                    <span class="home__subtitle">Welcome To My World</span>
+                    <h1 class="home__title">
+                        Hi, I'm Basu <span><br>Softwere Developer</span> aspirants. based in INDIA.
+                    </h1>
+                </div>
+
+                <img src="Images/Home.jpeg" alt="" class="home__img">
+            </div>
+        </section>
+        <!-- ==================== ABOUT ================== -->
+        <!-- ==================== SERVICES ================== -->
+        <!-- ==================== PORTFOILO ================== -->
+        <!-- ==================== CONTACT ================== -->
+    </main>
+
     <!-- ==================== Email Js ================== -->
     <script src=""></script>
-    
+
     <!-- ==================== MAIN JS ================== -->
     <script src="main.js"></script>
 </body>
+
 </html>
