About section is added with html and css

--- a/index.html
+++ b/index.html
@@ -33,6 +33,109 @@
             </div>
         </section>
         <!-- ==================== ABOUT ================== -->
+        <section class="about section" id="about">
+            <div class="about__container container grid">
+                <img src="Images/About.jpeg" alt="" class="about__img">
+
+                <div class="about__content">
+                    <h2 class="section__title">About Me</h2>
+
+                    <p class="about__description">Welcome to the website. If you're here, you're likely looking to find
+                        random words. Random Word Generator is the perfect tool to help you do this. While this tool
+                        isn't a word creator, it is a word generator that will generate random words for a variety of
+                        activities or uses. Even better, it allows you to adjust the parameters of the random words to
+                        best fit your needs</p>
+
+                    <div class="tabs__btns">
+                        <span class="tabs__btn tab__active" data-target="#skills">Main Skills</span>
+                        <span class="tabs__btn" data-target="#award">Award</span>
+                        <span class="tabs__btn" data-target="#experience">Experience</span>
+                        <span class="tabs__btn" data-target="#education">Education & Certification</span>
+                    </div>
+
+                    <div class="tabs__content">
+                        <div class="tabs__item tab__active" data-content id="skills">
+                            <div class="tabs__data grid">
+                                <p class="tabs__description">
+                                    <span>User experience design</span> - UI/UX
+                                    <span>Delight the user and make it work.</span>
+                                </p>
+
+                                <p class="tabs__description">
+                                    <span>Web & User interface design</span> - Development
+                                    <span>Websites, web experiences, ...</span>
+                                </p>
+
+                                <p class="tabs__description">
+                                    <span>Interaction design</span> - Animation
+                                    <span>I like to move it move it.</span>
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="tabs__item " data-content id="award">
+                            <div class="tabs__data grid">
+                                <p class="tabs__description">
+                                    <span>Awwward.com</span> - Winner
+                                    <span>2019 - 2020.</span>
+                                </p>
+
+                                <p class="tabs__description">
+                                    <span>Css design Awards</span> - Winner
+                                    <span>2017 - 2018.</span>
+                                </p>
+
+                                <p class="tabs__description">
+                                    <span>Design nominees </span> - site of the day
+                                    <span>2013 - 2014.</span>
+                                </p>
+                            </div>
+                        </div>
+
+
+                        <div class="tabs__item " data-content id="experience">
+                            <div class="tabs__data grid">
+                                <p class="tabs__description">
+                                    <span>Sr. Softwere Engineer</span> - Google
+                                    <span>2018 - current.</span>
+                                </p>
+
+                                <p class="tabs__description">
+                                    <span>Associate Softwere Engineer</span> - Microsoft
+                                    <span>2017 - 2018.</span>
+                                </p>
+
+                                <p class="tabs__description">
+                                    <span>Softwere Engineer</span> - Alibaba
+                                    <span>2013 - 2014.</span>
+                                </p>
+                            </div>
+                        </div>
+
+
+                        <div class="tabs__item " data-content id="education">
+                            <div class="tabs__data grid">
+                                <p class="tabs__description">
+                                    <span>B-Tech in CSE</span> - DIATM
+                                    <span>2024.</span>
+                                </p>
+
+                                <p class="tabs__description">
+                                    <span>Diploma In compter science and Technology</span> - Durgapur Institute and
+                                    Polytechnic
+                                    <span>2021.</span>
+                                </p>
+
+                                <p class="tabs__description">
+                                    <span>12th In computer</span> - Chatra KunjaRani Bani Bhavan High school
+                                    <span>2019.</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- ==================== SERVICES ================== -->
         <!-- ==================== PORTFOILO ================== -->
         <!-- ==================== CONTACT ================== -->
