--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                 <div class="about__content">
                     <h2 class="section__title">About Me</h2>
 
-                    <p class="about__description">Welcome to the website. If you're here, you're likely looking to find
-                        random words. Random Word Generator is the perfect tool to help you do this. While this tool
-                        isn't a word creator, it is a word generator that will generate random words for a variety of
-                        activities or uses. Even better, it allows you to adjust the parameters of the random words to
-                        best fit your needs</p>
+                    <p class="about__description">To be the part of a prestigious IT organization by applying my
+                        technical & analytical skills to bring more proficiency towards the renowned organization. Where
+                        I can possess my software skills & knowledge to the organization for the growth oriented &
+                        challenging career of me alongside the company through the experience, continuous practical
+                        learning & teamwork.</p>
 
                     <div class="tabs__btns">
                         <span class="tabs__btn tab__active" data-target="#skills">Main Skills</span>
-                        <span class="tabs__btn" data-target="#award">Award</span>
-                        <span class="tabs__btn" data-target="#experience">Experience</span>
+                        <!-- <span class="tabs__btn" data-target="#award">Award</span> -->
+                        <!-- <span class="tabs__btn" data-target="#experience">Experience</span> -->
                         <span class="tabs__btn" data-target="#education">Education & Certification</span>
                     </div>
 
@@ -57,23 +57,23 @@
                         <div class="tabs__item tab__active" data-content id="skills">
                             <div class="tabs__data grid">
                                 <p class="tabs__description">
-                                    <span>User experience design</span> - UI/UX
-                                    <span>Delight the user and make it work.</span>
+                                    <span>Android Application Design</span> - UI/UX & Backend
+                                    <span>Technologies like JAVA, XML, Firebase database.</span>
                                 </p>
 
                                 <p class="tabs__description">
-                                    <span>Web & User interface design</span> - Development
-                                    <span>Websites, web experiences, ...</span>
+                                    <span>JAVA JDBC Interface Design</span> - Development
+                                    <span>JAVA, Serlet, ...</span>
                                 </p>
 
                                 <p class="tabs__description">
-                                    <span>Interaction design</span> - Animation
-                                    <span>I like to move it move it.</span>
+                                    <span>Fundamental Interaction </span> - Logic Buliding/Problem Solveing
+                                    <span>DSA with JAVA, Networking, Strong Oops concept.</span>
                                 </p>
                             </div>
                         </div>
 
-                        <div class="tabs__item " data-content id="award">
+                        <!-- <div class="tabs__item " data-content id="award">
                             <div class="tabs__data grid">
                                 <p class="tabs__description">
                                     <span>Awwward.com</span> - Winner
@@ -90,10 +90,10 @@
                                     <span>2013 - 2014.</span>
                                 </p>
                             </div>
-                        </div>
+                        </div> -->
 
 
-                        <div class="tabs__item " data-content id="experience">
+                        <!-- <div class="tabs__item " data-content id="experience">
                             <div class="tabs__data grid">
                                 <p class="tabs__description">
                                     <span>Sr. Softwere Engineer</span> - Google
@@ -110,25 +110,31 @@
                                     <span>2013 - 2014.</span>
                                 </p>
                             </div>
-                        </div>
+                        </div> -->
 
 
                         <div class="tabs__item " data-content id="education">
                             <div class="tabs__data grid">
                                 <p class="tabs__description">
-                                    <span>B-Tech in CSE</span> - DIATM
-                                    <span>2024.</span>
+                                    <span>Bachelor of Technology in Computer Science & Engineering</span> - Durgapur
+                                    Institute Of Advanced Technology And Management
+                                    <span>Batch - 2024.</span>
                                 </p>
 
                                 <p class="tabs__description">
-                                    <span>Diploma In compter science and Technology</span> - Durgapur Institute and
+                                    <span>Diploma In Compter Science and Technology</span> - Durgapur Institute and
                                     Polytechnic
-                                    <span>2021.</span>
+                                    <span>Batch - 2021.</span>
                                 </p>
 
                                 <p class="tabs__description">
-                                    <span>12th In computer</span> - Chatra KunjaRani Bani Bhavan High school
-                                    <span>2019.</span>
+                                    <span>12th In Computer</span> - Chatra KunjaRani Bani Bhavan High school
+                                    <span>Batch - 2019.</span>
+                                </p>
+
+                                <p class="tabs__description">
+                                    <span>10th[Madhyamik]</span> - Barnan High school(H.S)
+                                    <span>Batch - 2017.</span>
                                 </p>
                             </div>
                         </div>
