Service Section added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- ==================== UNICONs ================== -->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <!-- ==================== FONTAWESOME ================== -->
+    <script src="https://kit.fontawesome.com/17f5b9ea85.js" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha384-********" crossorigin="anonymous"> -->
+
+    <!-- ==================== UNICONS ================== -->
+    <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"> -->
 
     <!-- ==================== CSS ================== -->
     <link rel="stylesheet" href="style.css">
@@ -143,6 +147,69 @@
             </div>
         </section>
         <!-- ==================== SERVICES ================== -->
+
+        <section class="services section" id="services">
+            <h2 class="section__title">My Awesome Service</h2>
+            <p class="section__description">There are variations of passages of larem ipsum available but the majority
+                have sufferd alteration.
+            </p>
+
+            <div class="services__container container grid">
+                <div class="services__item">
+                    <!-- <i class="uis uis-chart services__icon"></i> -->
+                    <i class="fa-solid fa-square-rss services__icon"></i>
+
+                    <h3 class="services__title">Business Stratagy</h3>
+                    <p class="services__description">There are variations of passages of larem ipsum available but the
+                        majority have sufferd alteration.</p>
+                </div>
+
+                <div class="services__item">
+                    <!-- <i class="uis uis-layer-group services__icon"></i> -->
+                    <i class="fa-solid fa-layer-group services__icon"></i>
+
+                    <h3 class="services__title">Web Development</h3>
+                    <p class="services__description">There are variations of passages of larem ipsum available but the
+                        majority have sufferd alteration.</p>
+                </div>
+
+                <div class="services__item">
+                    <!-- <i class="uis uis-user-arrows services__icon"></i> -->
+                    <i class="fa-solid fa-users services__icon"></i>
+
+                    <h3 class="services__title">Marketing & Reporting</h3>
+                    <p class="services__description">There are variations of passages of larem ipsum available but the
+                        majority have sufferd alteration.</p>
+                </div>
+
+                <div class="services__item">
+                    <!-- <i class="uis uis-layer-group services__icon"></i> -->
+                    <i class="fa-solid fa-desktop services__icon"></i>
+
+                    <h3 class="services__title">Mobile Development</h3>
+                    <p class="services__description">There are variations of passages of larem ipsum available but the
+                        majority have sufferd alteration.</p>
+                </div>
+
+                <div class="services__item">
+                    <!-- <i class="uis uis-user-arrows services__icon"></i> -->
+                    <i class="fa-solid fa-users services__icon"></i>
+
+                    <h3 class="services__title">Markeing & Reporting</h3>
+                    <p class="services__description">There are variations of passages of larem ipsum available but the
+                        majority have sufferd alteration.</p>
+                </div>
+
+                <div class="services__item">
+                    <!-- <i class="uis uis-layer-group services__icon"></i> -->
+                    <i class="fa-solid fa-desktop services__icon"></i>
+        
+                    <h3 class="services__title">Mobile Development</h3>
+                    <p class="services__description">There are variations of passages of larem ipsum available but the
+                        majority have sufferd alteration.</p>
+                </div>
+            </div>
+        </section>
         <!-- ==================== PORTFOILO ================== -->
         <!-- ==================== CONTACT ================== -->
     </main>
