One skill added in about section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                                 </p>
 
                                 <p class="tabs__description">
+                                    <span>Website Development</span> - Development
+                                    <span>Technologies used HTML, CSS, JAVAScript...</span>
+                                </p>
+                                
+                                <p class="tabs__description">
                                     <span>JAVA JDBC Interface Design</span> - Development
                                     <span>JAVA, Serlet, ...</span>
                                 </p>
