Updated services with actual information in Services Section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                     <span>Website Development</span> - Development
                                     <span>Technologies used HTML, CSS, JAVAScript...</span>
                                 </p>
-                                
+
                                 <p class="tabs__description">
                                     <span>JAVA JDBC Interface Design</span> - Development
                                     <span>JAVA, Serlet, ...</span>
@@ -151,49 +151,52 @@
                 </div>
             </div>
         </section>
-        <!-- ==================== SERVICES ================== -->
 
+        <!-- ==================== SERVICES ================== -->
         <section class="services section" id="services">
             <h2 class="section__title">My Awesome Service</h2>
-            <p class="section__description">There are variations of passages of larem ipsum available but the majority
-                have sufferd alteration.
+            <p class="section__description">"Full Range IT Services: From crafting websites to designing Android mobile
+                apps and developing software with my expertise and logical approach. Elevate your online presence with
+                our custom-tailored solutions, exclusively for you."
             </p>
 
             <div class="services__container container grid">
                 <div class="services__item">
                     <!-- <i class="uis uis-chart services__icon"></i> -->
-                    <i class="fa-solid fa-square-rss services__icon"></i>
+                    <i class="fa-solid fa-laptop-code services__icon"></i>
 
-                    <h3 class="services__title">Business Stratagy</h3>
-                    <p class="services__description">There are variations of passages of larem ipsum available but the
-                        majority have sufferd alteration.</p>
+                    <h3 class="services__title">Android Development</h3>
+                    <p class="services__description">
+                        "Skilled Android developer creating innovative mobile apps with a focus on user experience and
+                        cutting-edge technology."</p>
                 </div>
 
                 <div class="services__item">
                     <!-- <i class="uis uis-layer-group services__icon"></i> -->
-                    <i class="fa-solid fa-layer-group services__icon"></i>
+                    <i class="fa-solid fa-code services__icon"></i>
 
                     <h3 class="services__title">Web Development</h3>
-                    <p class="services__description">There are variations of passages of larem ipsum available but the
-                        majority have sufferd alteration.</p>
+                    <p class="services__description">"Experienced web developer crafting responsive websites with modern
+                        design and seamless functionality for optimal user engagement."</p>
                 </div>
 
                 <div class="services__item">
                     <!-- <i class="uis uis-user-arrows services__icon"></i> -->
-                    <i class="fa-solid fa-users services__icon"></i>
+                    <i class="fa-solid fa-database services__icon"></i>
 
-                    <h3 class="services__title">Marketing & Reporting</h3>
-                    <p class="services__description">There are variations of passages of larem ipsum available but the
-                        majority have sufferd alteration.</p>
+                    <h3 class="services__title">JAVA JDBC</h3>
+                    <p class="services__description">
+                        "Proficient JAVA JDBC developer building robust database applications with efficient data access
+                        and management capabilities."</p>
                 </div>
 
                 <div class="services__item">
                     <!-- <i class="uis uis-layer-group services__icon"></i> -->
-                    <i class="fa-solid fa-desktop services__icon"></i>
+                    <i class="fa-solid fa-mobile services__icon"></i>
 
                     <h3 class="services__title">Mobile Development</h3>
-                    <p class="services__description">There are variations of passages of larem ipsum available but the
-                        majority have sufferd alteration.</p>
+                    <p class="services__description">"Mobile development expert creating dynamic apps with intuitive
+                        interfaces, exceptional performance, and seamless user experiences across platforms."</p>
                 </div>
 
                 <div class="services__item">
@@ -201,21 +204,23 @@
                     <i class="fa-solid fa-users services__icon"></i>
 
                     <h3 class="services__title">Markeing & Reporting</h3>
-                    <p class="services__description">There are variations of passages of larem ipsum available but the
-                        majority have sufferd alteration.</p>
+                    <p class="services__description">"Marketing & Reporting specialist delivering actionable insights,
+                        strategic campaigns, and data-driven solutions to drive business growth and success."</p>
                 </div>
 
                 <div class="services__item">
                     <!-- <i class="uis uis-layer-group services__icon"></i> -->
-                    <i class="fa-solid fa-desktop services__icon"></i>
-        
-                    <h3 class="services__title">Mobile Development</h3>
-                    <p class="services__description">There are variations of passages of larem ipsum available but the
-                        majority have sufferd alteration.</p>
+                    <i class="fa-solid fa-server services__icon"></i>
+
+                    <h3 class="services__title">SQL Services</h3>
+                    <p class="services__description">"SQL Services: Optimizing databases, ensuring data integrity, and
+                        delivering efficient solutions for seamless data management and retrieval."</p>
                 </div>
             </div>
         </section>
+
         <!-- ==================== PORTFOILO ================== -->
+
         <!-- ==================== CONTACT ================== -->
     </main>
 
