--- a/index.html
+++ b/index.html
@@ -220,7 +220,75 @@
         </section>
 
         <!-- ==================== PORTFOILO ================== -->
+        <section class="portfolio section" id="portfolio">
+            <h2 class="section__title">My Latest Project</h2>
+            <p class="section__description">There are variations of passages of larem ipsum available but the majority
+                have sufferd alteration.</p>
 
+            <div class="portfolio__container container grid">
+                <div class="portfolio__item">
+                    <img src="Images/work-1.png" alt="" class="portfolio__img">
+
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">Development</p>
+                        <h3 class="portfolio__title">Web Design</h3>
+                        <p class="portfolio__description">Lorem ipusm dolor sit amet, conse ctetur adipiscing elit.</p>
+                    </div>
+                </div>
+
+                <div class="portfolio__item">
+                    <img src="Images/work-2.png" alt="" class="portfolio__img">
+
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">Product Design</p>
+                        <h3 class="portfolio__title">
+                            App Development
+                        </h3>
+                        <p class="portfolio__description">Lorem ipusm dolor sit amet, conse ctetur adipiscing elit.</p>
+                    </div>
+                </div>
+
+                <div class="portfolio__item">
+                    <img src="Images/work-3.png" alt="" class="portfolio__img">
+
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">Application</p>
+                        <h3 class="portfolio__title">Photoshop Design</h3>
+                        <p class="portfolio__description">Lorem ipusm dolor sit amet, conse ctetur adipiscing elit.</p>
+                    </div>
+                </div>
+
+                <div class="portfolio__item">
+                    <img src="Images/work-2.png" alt="" class="portfolio__img">
+
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">Web Design</p>
+                        <h3 class="portfolio__title">Website Design</h3>
+                        <p class="portfolio__description">Lorem ipusm dolor sit amet, conse ctetur adipiscing elit.</p>
+                    </div>
+                </div>
+
+                <div class="portfolio__item">
+                    <img src="Images/work-3.png" alt="" class="portfolio__img">
+                    
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">Application</p>
+                        <h3 class="portfolio__title">Web Application</h3>
+                        <p class="portfolio__description">Lorem ipusm dolor sit amet, conse ctetur adipiscing elit.</p>
+                    </div>
+                </div>
+
+                <div class="portfolio__item">
+                    <img src="Images/work-1.png" alt="" class="portfolio__img">
+                    
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">UX/UI Design</p>
+                        <h3 class="portfolio__title">Frontent Designer</h3>
+                        <p class="portfolio__description">Lorem ipusm dolor sit amet, conse ctetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- ==================== CONTACT ================== -->
     </main>
 
