--- a/index.html
+++ b/index.html
@@ -222,8 +222,10 @@
         <!-- ==================== PORTFOILO ================== -->
         <section class="portfolio section" id="portfolio">
             <h2 class="section__title">My Latest Project</h2>
-            <p class="section__description">There are variations of passages of larem ipsum available but the majority
-                have sufferd alteration.</p>
+            <p class="section__description">
+                "Explore our project featuring innovative apps, dynamic websites, and JDBC data integration. Seamlessly
+                blending tech and creativity, we enhance user experiences, streamline processes, and fuel development."
+            </p>
 
             <div class="portfolio__container container grid">
                 <div class="portfolio__item">
@@ -270,7 +272,7 @@
 
                 <div class="portfolio__item">
                     <img src="Images/work-3.png" alt="" class="portfolio__img">
-                    
+
                     <div class="portfolio__data">
                         <p class="portfolio__subtitle">Application</p>
                         <h3 class="portfolio__title">Web Application</h3>
@@ -280,7 +282,7 @@
 
                 <div class="portfolio__item">
                     <img src="Images/work-1.png" alt="" class="portfolio__img">
-                    
+
                     <div class="portfolio__data">
                         <p class="portfolio__subtitle">UX/UI Design</p>
                         <h3 class="portfolio__title">Frontent Designer</h3>
@@ -290,6 +292,46 @@
             </div>
         </section>
         <!-- ==================== CONTACT ================== -->
+        <section class="contact section" id="contact">
+            <div class="contact__container container grid">
+                <div class="contact__content">
+                    <h2 class="section__title">Hire Me</h2>
+
+                    <p class="contact__description">I am available for freelance work. Connect with me via phone:
+                        <a href="tell:+08918247282">08918247082</a> or email: <a
+                            href="mailto:samantabasu.2001@gmail.com">samantabasu.2001@gmail.com</a>
+                    </p>
+
+                    <form class="contact__form" id="contact-form">
+                        <div class="contact__form-input">
+                            <input type="text" name="name" placeholder="Your Name" class="contact__input"
+                                id="contact-name">
+                        </div>
+
+                        <div class="contact__form-input">
+                            <input type="email" name="email" placeholder="Your e-mail" class="contact__input"
+                                id="contact-email">
+                        </div>
+
+                        <div class="contact__form-input">
+                            <input type="text" name="subject" placeholder="Write a Subject" class="contact__input"
+                                id="contact-subject">
+                        </div>
+
+                        <div class="contact__form-input">
+                            <textarea name="message" id="contact-message" class="contact__input textarea"
+                                placeholder="Your Message"></textarea>
+                        </div>
+
+                        <input type="submit" value="Submit" class="btn">
+
+                        <p class="error__message" id="error-message"></p>
+                    </form>
+                </div>
+
+                <img src="Images/Image3.jpeg" alt="" class="contact__img">
+            </div>
+        </section>
     </main>
 
     <!-- ==================== Email Js ================== -->
