--- a/index.html
+++ b/index.html
@@ -21,6 +21,60 @@
 
 <body>
     <!-- ==================== HEADER ================== -->
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="index.html" class="nav__logo">Im<span>mu</span>ta<span>b</span>le</a>
+
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li><a href="#home" class="nav__link active-link">Home</a></li>
+
+                    <li><a href="#about" class="nav__link">About</a></li>
+
+                    <li><a href="#services" class="nav__link">Services</a></li>
+
+                    <li><a href="#portfolio" class="nav__link">Portfolio</a></li>
+
+                    <li><a href="#contact" class="nav__link">Contact</a></li>
+                </ul>
+
+                <div class="nav__close" id="nav-close">
+                    <i class="ui uil-times"></i>
+                </div>
+            </div>
+
+            <div class="nav__socials">
+                <a href="https://www.linkedin.com/in/basudev-samanta-b3b514220/" target="_blank" class="nav__socials-link">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+
+                <a href="https://github.com/Basu19062001" target="_blank" class="nav__socials-link">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+
+                <a href="https://www.facebook.com/profile.php?id=100024640284051" target="_blank" class="nav__socials-link">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+
+                <a href="https://leetcode.com/profile/" target="_blank" class="nav__socials-link">
+                    <i class="fa-solid fa-code"></i>
+                </a>
+
+                <a href="https://www.hackerrank.com/dashboard" target="_blank" class="nav__socials-link">
+                    <i class="fa-brands fa-hackerrank"></i>
+                </a>
+            </div>
+
+            <div class="nav__btns">
+                <a href="#contact" class="nav__link-btn btn">Let's Talk</a>
+
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="uil uil-bars"></i>
+                </div>
+            </div>
+        </nav>
+    </header>
+
     <!-- ==================== MAIN ================== -->
     <main class="class">
         <!-- ==================== HOME ================== -->
