--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </ul>
 
                 <div class="nav__close" id="nav-close">
-                    <i class="ui uil-times"></i>
+                    <i class="fa-solid fa-business-time"></i>
                 </div>
             </div>
 
@@ -69,7 +69,7 @@
                 <a href="#contact" class="nav__link-btn btn">Let's Talk</a>
 
                 <div class="nav__toggle" id="nav-toggle">
-                    <i class="uil uil-bars"></i>
+                    <i class="fa-solid fa-bars"></i>
                 </div>
             </div>
         </nav>
@@ -419,7 +419,9 @@
     </footer>
     
     <!-- ==================== SCROLL UP ================== -->
-    
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="fa-solid fa-arrow-up-long scrollup__icon"></i>
+    </a>
 
     <!-- ==================== Email Js ================== -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
