Screen Sizes added for all types

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="nav container">
             <a href="index.html" class="nav__logo">Im<span>mu</span>ta<span>b</span>le</a>
 
-            <div class="nav__menu" id="nav-menu">
+            <div class="nav__menu " id="nav-menu">
                 <ul class="nav__list">
                     <li><a href="#home" class="nav__link active-link">Home</a></li>
 
@@ -39,7 +39,7 @@
                 </ul>
 
                 <div class="nav__close" id="nav-close">
-                    <i class="fa-solid fa-business-time"></i>
+                    <i class="fa-solid fa-xmark"></i>
                 </div>
             </div>
 
