Updated in About and portfolio section

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
                     <div class="tabs__btns">
                         <span class="tabs__btn tab__active" data-target="#skills">Main Skills</span>
-                        <!-- <span class="tabs__btn" data-target="#award">Award</span> -->
+                        <span class="tabs__btn" data-target="#award">Certification & Award</span>
                         <!-- <span class="tabs__btn" data-target="#experience">Experience</span> -->
-                        <span class="tabs__btn" data-target="#education">Education & Certification</span>
+                        <span class="tabs__btn" data-target="#education">Education</span>
                     </div>
 
                     <div class="tabs__content">
@@ -138,24 +138,24 @@
                             </div>
                         </div>
 
-                        <!-- <div class="tabs__item " data-content id="award">
+                        <div class="tabs__item " data-content id="award">
                             <div class="tabs__data grid">
                                 <p class="tabs__description">
-                                    <span>Awwward.com</span> - Winner
-                                    <span>2019 - 2020.</span>
+                                    <span>TCS iON Career Edge - Young Professional</span> - Successfully completing
+                                    <span>03 Aug 2023 - 17 Aug 2023.</span>
                                 </p>
 
                                 <p class="tabs__description">
-                                    <span>Css design Awards</span> - Winner
-                                    <span>2017 - 2018.</span>
+                                    <span>Python Programming And Applications</span> - Participation
+                                    <span>1Day(s) Workshop - 21/05/2021.</span>
                                 </p>
 
                                 <p class="tabs__description">
-                                    <span>Design nominees </span> - site of the day
-                                    <span>2013 - 2014.</span>
+                                    <span>Certificate In Computer Application </span> - Successfully completing
+                                    <span>MAR 2017 - AUG 2017.</span>
                                 </p>
                             </div>
-                        </div> -->
+                        </div>
 
 
                         <!-- <div class="tabs__item " data-content id="experience">
@@ -305,7 +305,7 @@
                         <h3 class="portfolio__title">
                             App Development
                         </h3>
-                        <p class="portfolio__description">Lorem ipusm dolor sit amet, conse ctetur adipiscing elit.</p>
+                        <p class="portfolio__description">Coming Soon.</p>
                     </div>
                 </div>
 
@@ -315,7 +315,7 @@
                     <div class="portfolio__data">
                         <p class="portfolio__subtitle">Application</p>
                         <h3 class="portfolio__title">Photoshop Design</h3>
-                        <p class="portfolio__description">Lorem ipusm dolor sit amet, conse ctetur adipiscing elit.</p>
+                        <p class="portfolio__description">Coming Soon.</p>
                     </div>
                 </div>
 
@@ -325,7 +325,7 @@
                     <div class="portfolio__data">
                         <p class="portfolio__subtitle">Web Design</p>
                         <h3 class="portfolio__title">Website Design</h3>
-                        <p class="portfolio__description">Lorem ipusm dolor sit amet, conse ctetur adipiscing elit.</p>
+                        <p class="portfolio__description">Coming Soon.</p>
                     </div>
                 </div>
 
@@ -335,7 +335,7 @@
                     <div class="portfolio__data">
                         <p class="portfolio__subtitle">Application</p>
                         <h3 class="portfolio__title">Web Application</h3>
-                        <p class="portfolio__description">Lorem ipusm dolor sit amet, conse ctetur adipiscing elit.</p>
+                        <p class="portfolio__description">Coming Soon.</p>
                     </div>
                 </div>
 
@@ -345,7 +345,7 @@
                     <div class="portfolio__data">
                         <p class="portfolio__subtitle">UX/UI Design</p>
                         <h3 class="portfolio__title">Frontent Designer</h3>
-                        <p class="portfolio__description">Lorem ipusm dolor sit amet, conse ctetur adipiscing elit.</p>
+                        <p class="portfolio__description">Coming Soon.</p>
                     </div>
                 </div>
             </div>
