Home Page image updated

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </h1>
                 </div>
 
-                <img src="Images/Home.jpeg" alt="" class="home__img">
+                <img src="Images/Image.jpeg" alt="" class="home__img">
             </div>
         </section>
         <!-- ==================== ABOUT ================== -->
